--- a/Grid.html
+++ b/Grid.html
@@ -9,6 +9,17 @@
       .container {
         display: grid;
         background-color: aquamarine;
+        height: 56vh;
+        /* grid-row-gap: 9px;
+        grid-column-gap: 9px; */
+        grid-gap: 20px 9px;
+        /* replacement of row gap and column gap */
+        /* grid-template-columns: 30px 334px auto;
+         /* sets the column width and auto sets the no. of columns */
+        /* grid-template-rows: 40px 40px; */
+        /* use to set the height of rows */
+        grid-template-columns: auto auto auto auto;
+        /* justify-content: center; */
       }
       .item {
         background-color: blueviolet;
@@ -19,9 +30,15 @@
   <body>
     <div class="container">
       <div class="item">1</div>
-      <div class="item">2</div>
+      <div class="item" style="grid-column: 1/3; grid-row: 1/3">2</div>
+      <!-- grid column is used to set the width of columns upto no. of lines and grid row is used to set the height of columns upto no. of lines and if we write grid-row: 1/ span 3 then it will cover space of three items here 1 denotes the line number-->
       <div class="item">3</div>
       <div class="item">4</div>
+      <div class="item">5</div>
+      <div class="item">6</div>
+      <div class="item">7</div>
+      <div class="item">8</div>
+      <div class="item">9</div>
     </div>
   </body>
 </html>
