--- a/cssprac7.html
+++ b/cssprac7.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    <div class="containe">
+    <div class="container">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid
       harum officiis? Quisquam quo magnam voluptates a deleniti dolor autem
       aspernatur officiis esse iure ad sapiente praesentium fuga aliquid tenetur
